--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Caveat:400,700&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin-ext');
+
 body {
-    font-family: 'Noto Sans', sans-serif;
-    background-color: #55ACEE;
+    font-family: 'Open Sans', sans-serif;
+    background-color: #76BCF1;
     margin: 0;
 }
 
 h1 {
     text-align: center;
     font-size: 40px;
-    margin: 50px 0 100px 0;
+    margin: 30px 0 100px 0;
     letter-spacing: 3px;
     color: #fff;
 }
@@ -16,36 +18,87 @@ h1 {
 .box {
     text-align: center;
     color: #fff;
+    margin-bottom: 100px;
+}
+
+.quote {
+    font-family: 'Caveat', cursive;
+    font-size: 30px;
+}
+
+.quote:before {
+    content: '"';
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+.quote:after {
+    content: '"';
+    font-weight: bold;
+    margin-left: 5px;
 }
 
 .trigger,
 .tweet {
     display: block;
-    width: 300px;
-    padding: 10px 30px;
+    width: 250px;
     border: 2px solid #fff;
-    font-size: 20px;
+    font-size: 22px;
     color: #fff;
-    background-color: #55ACEE;
+    background-color: #76BCF1;
     margin: 0 auto;
     margin-bottom: 30px;
     text-align: center;
     cursor: pointer;
+    padding: 5px 0;
+
 }
 
 .tweet {
     text-decoration: none;
+    line-height: 22px;
+    transition-duration: 1.5s;
+    animation-name: jumpingtweet;
+    animation-duration: 3s;
+    animation-delay: 4s;
+    animation-iteration-count: infinite;
+}
+
+.trigger {
+    outline: none;
+    line-height: 22px;
+    transition-duration: 1.5s;
 }
 
 .trigger:hover {
-	background-color: #3B78A6;
+	background-color: #fff; 
+	color: #4C9AD6;
+    border-color: #4C9AD6;
 }
 
 .tweet:hover {
-	background-color: #3B78A6;
+	background-color: #fff; 
+	color: #4C9AD6;
+    border-color: #4C9AD6;
 }
 
-.tweet,
-i.fa {
-    margin: auto;
+.fa-twitter {
+    margin: 0 7px;
+}
+
+@keyframes jumpingtweet {
+    0%, 20%, 60%, 100% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+
+	40% {
+		-webkit-transform: translateY(1px);
+		transform: translateY(1px);
+	}
+
+	80% {
+		-webkit-transform: translateY(1px);
+		transform: translateY(1px);
+	}
 }
